fix bug where letter-spacing transition didn't work on firefox

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -262,6 +262,7 @@ nav li{
 //* Animations
 //***************************
 .explode{
+	letter-spacing: 0; //required for transition to work on firefox
 	transition:letter-spacing 1s ease-out;
 }
 .explode:hover{
